feat: ajout du contrôle de saisie lors de l'ajout d'une personne + envoi de SMS via l'API TwiiÃoo